Copy edit changes
Made some editorial changes to text, added bullet points etc.

--- a/source/standards/hosting.html.md.erb
+++ b/source/standards/hosting.html.md.erb
@@ -7,20 +7,19 @@ expires: 2017-11-01
 
 <%= partial :expires %>
 
-GDS follows the [Government Cloud First policy](https://www.gov.uk/guidance/government-cloud-first-policy) meaning that we prefer the use of PaaS and IaaS solutions over managing our own hardware
+GDS follows the [Government Cloud First policy](https://www.gov.uk/guidance/government-cloud-first-policy) meaning that we prefer the use of Platform as a service (PaaS) and Infrastructure as a Service (IaaS) solutions over managing our own hardware.
 
 ## User Needs
-
-* Users want systems that are highly scalable and available
-* GDS wants to manage the environments easily and simply, with confidence via automated tools
+Your hosting solution will need to accommodate the user needs of:
+* service users who want systems that are highly scalable and available
+* GDS administrators who want to manage their environments easily, simply and with confidence using automated tools
 
 ## Principles
 
 GDS will build new tools on a primary cloud platform for each of PaaS and IaaS.
 
-We prefer systems built on a PaaS to systems built on IaaS where possible.
-
-We prefer cloud suppliers that are well supported by common tooling to reduce cost of migrating to a new supplier.
+* we prefer systems built on a PaaS to systems built on IaaS where possible
+* we prefer cloud suppliers that are well supported by common tooling to reduce cost of migrating to a new supplier
 
 ## Tools
 
@@ -28,16 +27,29 @@ GDS has selected two cloud platforms:
 
 ### PaaS
 
+GOV.UK Platform as a Service (PaaS) manages the deployment of your apps and services.
 * GOV.UK PaaS
-  https://cloud.service.gov.uk 
+  https://cloud.service.gov.uk
 
 ### IaaS
 
+Amazon Web Services (AWS) offer scalable computing, storage and deployment services.
 * Amazon Web Services
   https://aws.amazon.com
 
 ### Lock in concerns
 
-In order to minimise lock-in, we determine that for the IaaS model, we will use only the core features of AWS that are common with the biggest competitors.  That is to say we will be using  for example: Compute, Networking (load balancing and network segregation), File storage (EBS and S3), Hosted databases (RDS and DynamoDB).
+In order to minimise costs if you switch services, we determine that for the IaaS model, we will only use the core features of AWS that are common with the biggest competitors, for example:
 
-Other platform like services (Cloudfront, Route 53, SQS, SNS, Directory Service and so on) need to be weighed against the lock-in cost before adopting.
+  * Compute
+  * Networking (load balancing and network segregation)
+  * File storage (EBS and S3)
+  * Hosted databases (Amazon Amazon Relational Database Service and Amazon DynamoDB)
+
+  Other platform-like services should be weighed against the cost of switching to another service before adopting, for example:
+
+  * CloudFront
+  * Route 53
+  * Simple Queue Service (SQS)
+  * Simple Notification Service (SNS)
+  * AWS Directory Service for Microsoft Active Directory
