--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -46,6 +46,7 @@ are still working for GDS as an organization.
 
 ### Operating services
 
+- [hosting](standards/hosting.html)
 - [managing DNS](standards/dns-hosting.html)
 - [monitoring your service](standards/monitoring.html)
 - [operating systems](standards/operating-systems.html)
