--- a/source/manuals/programming-languages.html.md.erb
+++ b/source/manuals/programming-languages.html.md.erb
@@ -33,7 +33,7 @@ Some good reasons to ignore a particular guideline:
 - When the code needs to remain compatible with older versions that
   don't support the feature recommended by the style guide.
 
-We've got a consistent style for [Ruby](programming-languages/ruby.html) and will
-add a guide for Python and Java.
+We've got a consistent style for [Ruby](programming-languages/ruby.html), [Java](programming-languages/java.html) and will
+add a guide for Python.
 
 
