--- a/source/manuals/programming-languages.html.md.erb
+++ b/source/manuals/programming-languages.html.md.erb
@@ -36,4 +36,10 @@ Some good reasons to ignore a particular guideline:
 We've got a consistent style for [Ruby](programming-languages/ruby.html), [Java](programming-languages/java.html) and will
 add a guide for Python.
 
+Some of the guidelines in the style guides are codified in a
+[.editorconfig](programming-languages/.editorconfig) file. Place a copy of this
+file in your project’s repository to have tooling that supports
+[EditorConfig](http://editorconfig.org/) automatically adhere to the
+guidelines.
+
 
