Update references to gds-way repository
Now the repository has been renamed from gds-tech to gds-way this updates any
remaining links to point to the gds-way repo.

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -70,7 +70,7 @@ decision or standard.
 We’d like to thank all contributors for their suggestions and challenges as we continue to build and develop this repository, and seek the best way to build and operate our services so we can deliver at scale.
 
 If you think you can contribute a change to this repository which reflects
-current practice at GDS, make a pull request in [GitHub](https://github.com/alphagov/gds-tech)
+current practice at GDS, make a pull request in [GitHub](https://github.com/alphagov/gds-way)
 and we'll discuss it at the Tech Ops Forum meeting and in the
 [#tech-ops-forum Slack channel](https://govuk.slack.com/messages/tech-ops-forum/).
 
